crates/flow-lower/tests/snapshots/golden__sum_to_n.snap
---
source: crates/flow-lower/tests/golden.rs
assertion_line: 13
expression: dump
---
flowchart LR
    subgraph f0["fn sum_to_n"]
        f0o0(("i32"))
        f0o1(("ret: i32"))
        f0o2(("1: i32"))
        f0o3(("0: i32"))
        f0o4(("(i32, i32)"))
        f0o5(("⟲ (i32, i32)"))
        f0o6(("i: i32"))
        f0o7(("acc: i32"))
        f0o8(("(i32, i32)"))
        f0o9(("bool"))
        f0o10(("(i32, i32)"))
        f0o11(("acc: i32"))
        f0o12(("1: i32"))
        f0o13(("(i32, i32)"))
        f0o14(("i: i32"))
        f0o15(("(i32, i32)"))
        f0o16(("((i32, i32), bool)"))
        f0o17(("(i32, bool)"))
        f0o2 -- "Pair 0/2" --> f0o4
        f0o3 -- "Pair 1/2" --> f0o4
        f0o4 -- "LoopEnter" --> f0o5
        f0o5 -- "Proj 0" --> f0o6
        f0o5 -- "Proj 1" --> f0o7
        f0o6 -- "Pair 0/2" --> f0o8
        f0o0 -- "Pair 1/2" --> f0o8
        f0o8 -- "Le" --> f0o9
        f0o7 -- "Pair 0/2" --> f0o10
        f0o6 -- "Pair 1/2" --> f0o10
        f0o10 -- "Add" --> f0o11
        f0o6 -- "Pair 0/2" --> f0o13
        f0o12 -- "Pair 1/2" --> f0o13
        f0o13 -- "Add" --> f0o14
        f0o14 -- "Pair 0/2" --> f0o15
        f0o11 -- "Pair 1/2" --> f0o15
        f0o15 -- "Pair 0/2" --> f0o16
        f0o9 -- "Pair 1/2" --> f0o16
        f0o16 -- "LoopBack ↩" --> f0o5
        f0o7 -- "Pair 0/2" --> f0o17
        f0o9 -- "Pair 1/2" --> f0o17
        f0o17 -- "LoopExit" --> f0o1
    end
    subgraph f1["fn main"]
        f1o0(("io"))
        f1o1(("ret: io"))
        f1o2(("10: i32"))
        f1o3(("total: i32"))
        f1o4(("(io, i32)"))
        f1o5(("io"))
        f1o2 -- "Call" --> f1o3
        f1o0 -- "Pair 0/2" --> f1o4
        f1o3 -- "Pair 1/2" --> f1o4
        f1o4 -- "Print" --> f1o5
        f1o5 -- "Output" --> f1o1
    end
