crates/flow-lower/tests/snapshots/golden__vector_add.snap
---
source: crates/flow-lower/tests/golden.rs
expression: dump
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("0: i32"))
        f0o3(("1: i32"))
        f0o4(("2: i32"))
        f0o5(("3: i32"))
        f0o6(("4: i32"))
        f0o7(("5: i32"))
        f0o8(("6: i32"))
        f0o9(("7: i32"))
        f0o10(("8: i32"))
        f0o11(("9: i32"))
        f0o12(("10: i32"))
        f0o13(("11: i32"))
        f0o14(("12: i32"))
        f0o15(("13: i32"))
        f0o16(("14: i32"))
        f0o17(("15: i32"))
        f0o18(("a: [i32; 16]"))
        f0o19(("100: i32"))
        f0o20(("100: i32"))
        f0o21(("100: i32"))
        f0o22(("100: i32"))
        f0o23(("100: i32"))
        f0o24(("100: i32"))
        f0o25(("100: i32"))
        f0o26(("100: i32"))
        f0o27(("100: i32"))
        f0o28(("100: i32"))
        f0o29(("100: i32"))
        f0o30(("100: i32"))
        f0o31(("100: i32"))
        f0o32(("100: i32"))
        f0o33(("100: i32"))
        f0o34(("100: i32"))
        f0o35(("b: [i32; 16]"))
        f0o36(("([i32; 16], [i32; 16])"))
        f0o37(("[i32; 16]"))
        f0o38(("[i32; 16]"))
        f0o39(("([i32; 16], [i32; 16])"))
        f0o40(("[(i32, i32); 16]"))
        f0o41(("c: [i32; 16]"))
        f0o42(("#quot;c[0]  = #quot;: str"))
        f0o43(("(io, str)"))
        f0o44(("io"))
        f0o45(("0: i32"))
        f0o46(("([i32; 16], i32)"))
        f0o47(("i32"))
        f0o48(("(io, i32)"))
        f0o49(("io"))
        f0o50(("#quot;c[15] = #quot;: str"))
        f0o51(("(io, str)"))
        f0o52(("io"))
        f0o53(("15: i32"))
        f0o54(("([i32; 16], i32)"))
        f0o55(("i32"))
        f0o56(("(io, i32)"))
        f0o57(("io"))
        f0o58(("#quot;sum   = #quot;: str"))
        f0o59(("(io, str)"))
        f0o60(("io"))
        f0o61(("0: i32"))
        f0o62(("(i32, [i32; 16])"))
        f0o63(("total: i32"))
        f0o64(("(io, i32)"))
        f0o65(("io"))
        f0o2 -- "Pair 0/16" --> f0o18
        f0o3 -- "Pair 1/16" --> f0o18
        f0o4 -- "Pair 2/16" --> f0o18
        f0o5 -- "Pair 3/16" --> f0o18
        f0o6 -- "Pair 4/16" --> f0o18
        f0o7 -- "Pair 5/16" --> f0o18
        f0o8 -- "Pair 6/16" --> f0o18
        f0o9 -- "Pair 7/16" --> f0o18
        f0o10 -- "Pair 8/16" --> f0o18
        f0o11 -- "Pair 9/16" --> f0o18
        f0o12 -- "Pair 10/16" --> f0o18
        f0o13 -- "Pair 11/16" --> f0o18
        f0o14 -- "Pair 12/16" --> f0o18
        f0o15 -- "Pair 13/16" --> f0o18
        f0o16 -- "Pair 14/16" --> f0o18
        f0o17 -- "Pair 15/16" --> f0o18
        f0o19 -- "Pair 0/16" --> f0o35
        f0o20 -- "Pair 1/16" --> f0o35
        f0o21 -- "Pair 2/16" --> f0o35
        f0o22 -- "Pair 3/16" --> f0o35
        f0o23 -- "Pair 4/16" --> f0o35
        f0o24 -- "Pair 5/16" --> f0o35
        f0o25 -- "Pair 6/16" --> f0o35
        f0o26 -- "Pair 7/16" --> f0o35
        f0o27 -- "Pair 8/16" --> f0o35
        f0o28 -- "Pair 9/16" --> f0o35
        f0o29 -- "Pair 10/16" --> f0o35
        f0o30 -- "Pair 11/16" --> f0o35
        f0o31 -- "Pair 12/16" --> f0o35
        f0o32 -- "Pair 13/16" --> f0o35
        f0o33 -- "Pair 14/16" --> f0o35
        f0o34 -- "Pair 15/16" --> f0o35
        f0o18 -- "Pair 0/2" --> f0o36
        f0o35 -- "Pair 1/2" --> f0o36
        f0o36 -- "Proj 0" --> f0o37
        f0o36 -- "Proj 1" --> f0o38
        f0o37 -- "Pair 0/2" --> f0o39
        f0o38 -- "Pair 1/2" --> f0o39
        f0o39 -- "Zip" --> f0o40
        f0o40 -- "Map" --> f0o41
        f0o0 -- "Pair 0/2" --> f0o43
        f0o42 -- "Pair 1/2" --> f0o43
        f0o43 -- "Print" --> f0o44
        f0o41 -- "Pair 0/2" --> f0o46
        f0o45 -- "Pair 1/2" --> f0o46
        f0o46 -- "Index" --> f0o47
        f0o44 -- "Pair 0/2" --> f0o48
        f0o47 -- "Pair 1/2" --> f0o48
        f0o48 -- "Println" --> f0o49
        f0o49 -- "Pair 0/2" --> f0o51
        f0o50 -- "Pair 1/2" --> f0o51
        f0o51 -- "Print" --> f0o52
        f0o41 -- "Pair 0/2" --> f0o54
        f0o53 -- "Pair 1/2" --> f0o54
        f0o54 -- "Index" --> f0o55
        f0o52 -- "Pair 0/2" --> f0o56
        f0o55 -- "Pair 1/2" --> f0o56
        f0o56 -- "Println" --> f0o57
        f0o57 -- "Pair 0/2" --> f0o59
        f0o58 -- "Pair 1/2" --> f0o59
        f0o59 -- "Print" --> f0o60
        f0o61 -- "Pair 0/2" --> f0o62
        f0o41 -- "Pair 1/2" --> f0o62
        f0o62 -- "Fold" --> f0o63
        f0o60 -- "Pair 0/2" --> f0o64
        f0o63 -- "Pair 1/2" --> f0o64
        f0o64 -- "Println" --> f0o65
        f0o65 -- "Output" --> f0o1
    end
    subgraph f1["fn main::map@0"]
        f1o0(("(i32, i32)"))
        f1o1(("ret: i32"))
        f1o2(("i32"))
        f1o3(("i32"))
        f1o4(("(i32, i32)"))
        f1o0 -- "Proj 0" --> f1o2
        f1o0 -- "Proj 1" --> f1o3
        f1o2 -- "Pair 0/2" --> f1o4
        f1o3 -- "Pair 1/2" --> f1o4
        f1o4 -- "Add" --> f1o1
    end
    subgraph f2["fn main::fold@1"]
        f2o0(("(i32, i32)"))
        f2o1(("ret: i32"))
        f2o2(("i32"))
        f2o3(("i32"))
        f2o4(("(i32, i32)"))
        f2o0 -- "Proj 0" --> f2o2
        f2o0 -- "Proj 1" --> f2o3
        f2o2 -- "Pair 0/2" --> f2o4
        f2o3 -- "Pair 1/2" --> f2o4
        f2o4 -- "Add" --> f2o1
    end
