crates/flow-lower/tests/snapshots/golden__zip_builtin.snap
---
source: crates/flow-lower/tests/golden.rs
assertion_line: 13
expression: dump
---
flowchart LR
    subgraph f0["fn main"]
        f0o0(("io"))
        f0o1(("ret: io"))
        f0o2(("0: i32"))
        f0o3(("1: i32"))
        f0o4(("2: i32"))
        f0o5(("3: i32"))
        f0o6(("a: [i32; 4]"))
        f0o7(("100: i32"))
        f0o8(("101: i32"))
        f0o9(("102: i32"))
        f0o10(("103: i32"))
        f0o11(("b: [i32; 4]"))
        f0o12(("([i32; 4], [i32; 4])"))
        f0o13(("[i32; 4]"))
        f0o14(("[i32; 4]"))
        f0o15(("([i32; 4], [i32; 4])"))
        f0o16(("[(i32, i32); 4]"))
        f0o17(("c: [i32; 4]"))
        f0o18(("0: i32"))
        f0o19(("([i32; 4], i32)"))
        f0o20(("i32"))
        f0o21(("(io, i32)"))
        f0o22(("io"))
        f0o2 -- "Pair 0/4" --> f0o6
        f0o3 -- "Pair 1/4" --> f0o6
        f0o4 -- "Pair 2/4" --> f0o6
        f0o5 -- "Pair 3/4" --> f0o6
        f0o7 -- "Pair 0/4" --> f0o11
        f0o8 -- "Pair 1/4" --> f0o11
        f0o9 -- "Pair 2/4" --> f0o11
        f0o10 -- "Pair 3/4" --> f0o11
        f0o6 -- "Pair 0/2" --> f0o12
        f0o11 -- "Pair 1/2" --> f0o12
        f0o12 -- "Proj 0" --> f0o13
        f0o12 -- "Proj 1" --> f0o14
        f0o13 -- "Pair 0/2" --> f0o15
        f0o14 -- "Pair 1/2" --> f0o15
        f0o15 -- "Zip" --> f0o16
        f0o16 -- "Map" --> f0o17
        f0o17 -- "Pair 0/2" --> f0o19
        f0o18 -- "Pair 1/2" --> f0o19
        f0o19 -- "Index" --> f0o20
        f0o0 -- "Pair 0/2" --> f0o21
        f0o20 -- "Pair 1/2" --> f0o21
        f0o21 -- "Println" --> f0o22
        f0o22 -- "Output" --> f0o1
    end
    subgraph f1["fn main::map@0"]
        f1o0(("(i32, i32)"))
        f1o1(("ret: i32"))
        f1o2(("i32"))
        f1o3(("i32"))
        f1o4(("(i32, i32)"))
        f1o0 -- "Proj 0" --> f1o2
        f1o0 -- "Proj 1" --> f1o3
        f1o2 -- "Pair 0/2" --> f1o4
        f1o3 -- "Pair 1/2" --> f1o4
        f1o4 -- "Add" --> f1o1
    end
